[tool.poetry]
name = "nmapsubnetonline"
version = "1.0.0"
description = "Verify an nmap file against a target range file to determine if the network subnet is online or offline."
authors = ["John Smith <j.smith@domain.com>"]
readme = "README.md"
include = ["LICENSE","README.md"]
license = ""
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

packages = [
    {include = "nmapsubnetonline"},
    {include = "nmapstreamparser"},
    {include = "liblog"},
]

[tool.poetry.scripts]
nmapSubnetOnline = 'nmapsubnetonline.nmapsubnetonline:main'

[tool.poetry.dependencies]
python = "^3.11"
loguru = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"
loguru = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
